respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABA_Number__c</fullName>
        <label>ABA Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Target__c</fullName>
        <label>A Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <label>Account Potential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONSUMER</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT A</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT AA</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT AAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Executive_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_InternalFollower</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_External_Follower_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account External Follower User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_PartnerUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Logo__c</fullName>
        <formula>IMAGE( Url_Factory_Logo__c , Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Potential__c</fullName>
        <label>Account Potential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONSUMER</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT A</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT AA</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT AAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Send to Sap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Warning__c</fullName>
        <formula>IF(  Ciclo_de_Cobranza_Corto__c = True, IMAGE(&quot;https://pak2gologistics--c.documentforce.com/servlet/servlet.FileDownload?file=0154T000000I5XJ&quot;,&quot;Warning&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Prospect_Account_Name__c</fullName>
        <description>Cambio de Account Name por cambio en Company Name en Lead.</description>
        <label>Nombre (Lead)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acta_Constitutiva_Poder_Rep_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acta Constitutiva/Poder Rep Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actcons_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acta constitutiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveSap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Sector__c</fullName>
        <label>Activity Sector (Supplier Form)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activity 1</fullName>
                </value>
                <value>
                    <fullName>Activity 2</fullName>
                </value>
                <value>
                    <fullName>Activity 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acus_cta__c</fullName>
        <label>Acuse/ Sin acuse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fisico</fullName>
                </value>
                <value>
                    <fullName>Electronico</fullName>
                </value>
                <value>
                    <fullName>Sin acuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_in_Sap__c</fullName>
        <label>Address in Sap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adumar_cta__c</fullName>
        <label>Aduanas marítimas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acapulco</fullName>
                </value>
                <value>
                    <fullName>Altamira</fullName>
                </value>
                <value>
                    <fullName>Cancún</fullName>
                </value>
                <value>
                    <fullName>Ciudad del Carmen</fullName>
                </value>
                <value>
                    <fullName>Coatzacoalcos</fullName>
                </value>
                <value>
                    <fullName>Dos Bocas</fullName>
                </value>
                <value>
                    <fullName>Ensenada</fullName>
                </value>
                <value>
                    <fullName>Guaymas</fullName>
                </value>
                <value>
                    <fullName>La Paz</fullName>
                </value>
                <value>
                    <fullName>Lázaro Cárdenas</fullName>
                </value>
                <value>
                    <fullName>Manzanillo</fullName>
                </value>
                <value>
                    <fullName>Mazatlán</fullName>
                </value>
                <value>
                    <fullName>Progreso</fullName>
                </value>
                <value>
                    <fullName>Salina Cruz</fullName>
                </value>
                <value>
                    <fullName>Tampico</fullName>
                </value>
                <value>
                    <fullName>Tuxpan</fullName>
                </value>
                <value>
                    <fullName>Veracruz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aduterr_cta__c</fullName>
        <label>Aduanas Terrestres</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agua Prieta</fullName>
                </value>
                <value>
                    <fullName>Ciudad Acuña</fullName>
                </value>
                <value>
                    <fullName>Ciudad Camargo</fullName>
                </value>
                <value>
                    <fullName>Ciudad Juarez</fullName>
                </value>
                <value>
                    <fullName>Ciudad Miguel Alemán</fullName>
                </value>
                <value>
                    <fullName>Ciudad Reynosa</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Matamoros</fullName>
                </value>
                <value>
                    <fullName>Mexicali</fullName>
                </value>
                <value>
                    <fullName>Naco</fullName>
                </value>
                <value>
                    <fullName>Nogales</fullName>
                </value>
                <value>
                    <fullName>Nuevo Laredo</fullName>
                </value>
                <value>
                    <fullName>Ojinaga</fullName>
                </value>
                <value>
                    <fullName>Piedras Negras</fullName>
                </value>
                <value>
                    <fullName>Puerto Palomas</fullName>
                </value>
                <value>
                    <fullName>San Luis Rio Colorado</fullName>
                </value>
                <value>
                    <fullName>Sonoyta</fullName>
                </value>
                <value>
                    <fullName>Tecate</fullName>
                </value>
                <value>
                    <fullName>Tijuana</fullName>
                </value>
                <value>
                    <fullName>En la frontera sur</fullName>
                </value>
                <value>
                    <fullName>Ciudad Hidalgo</fullName>
                </value>
                <value>
                    <fullName>Subteniente López</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aer_cta__c</fullName>
        <label>Aereo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carga Aerea</fullName>
                </value>
                <value>
                    <fullName>Carga Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aereo__c</fullName>
        <label>Aereo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IMPO - Carga</fullName>
                </value>
                <value>
                    <fullName>IMPO - Paqueteria</fullName>
                </value>
                <value>
                    <fullName>EXPO - Carga</fullName>
                </value>
                <value>
                    <fullName>EXPO - Paqueteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airline_Code_Number__c</fullName>
        <label>Carrier Code Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Prefix__c</fullName>
        <inlineHelpText>Integración con Traxon, que es solo para la parte aerea</inlineHelpText>
        <label>Airline Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Quotes_Calc__c</fullName>
        <label>All Quotes</label>
        <summaryForeignKey>Customer_Quote__c.Account_for__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alma_cta__c</fullName>
        <label>Almacenaje</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Almacenaje__c</fullName>
        <label>Almacenaje</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Almacenaje</fullName>
                </value>
                <value>
                    <fullName>Por defnir</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annrevaer_cta__c</fullName>
        <label>Annual Revenue Aereo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annrevalm_cta__c</fullName>
        <label>Annual Revenue Almacenaje</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annrevfletin_cta__c</fullName>
        <label>Annual Revenue Flete Internacional Terre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annrevfletnac_cta__c</fullName>
        <label>Annual Revenue Flete Nacional Terrestre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annrevltlnac_cta__c</fullName>
        <label>Annual Revenue LTL Nacional</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annrevmar_cta__c</fullName>
        <label>Annual Revenue Maritimo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annrevservlog_cta__c</fullName>
        <label>Annual Revenue Servicio Logistico</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anos_Experiencia__c</fullName>
        <label>Años de Experiencia</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anounid_cta__c</fullName>
        <label>Año de las Unidades (Promedio)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipo__c</fullName>
        <label>Anticipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apellido_Contacto_Administrativo__c</fullName>
        <label>Apellido Contacto Administrativo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_Contacto_Comercial__c</fullName>
        <label>Apellido Contacto Comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_Contacto_Operativo__c</fullName>
        <label>Apellido Contacto Operativo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrendatario_Propietario__c</fullName>
        <description>Describe si es Propietario de la unidad o Arrendatario de la unidad</description>
        <label>Tipo de Relacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Propietario</fullName>
                </value>
                <value>
                    <fullName>Arrendatario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asisvta_cta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Atencion_al_Seguimiento__c</fullName>
        <label>Atención al Seguimiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Requiere notificación al cargar o descargar</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Requiere notificación al cargar o descargar, además de una llamada durante el proceso</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Requiere monitoreo continuo durante todo el proceso</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Clabe__c</fullName>
        <label>Clabe</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_Supplier_Form2__c</fullName>
        <label>Bank Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1010</fullName>
                    <label>ACCENDO BANCO</label>
                </value>
                <value>
                    <fullName>0062</fullName>
                    <label>AFIRME</label>
                </value>
                <value>
                    <fullName>0065</fullName>
                    <label>ANAHUAC</label>
                </value>
                <value>
                    <fullName>0127</fullName>
                    <label>AZTECA</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>BANAMEX</label>
                </value>
                <value>
                    <fullName>0145</fullName>
                    <label>BANCO BASE</label>
                </value>
                <value>
                    <fullName>0030</fullName>
                    <label>BANCO DEL BAJIO</label>
                </value>
                <value>
                    <fullName>0131</fullName>
                    <label>BANCO FAMSA</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>BANCOMEXT</label>
                </value>
                <value>
                    <fullName>0112</fullName>
                    <label>BANCO MONEX</label>
                </value>
                <value>
                    <fullName>0137</fullName>
                    <label>BANCOPPEL</label>
                </value>
                <value>
                    <fullName>1012</fullName>
                    <label>BANCO PROMERICA</label>
                </value>
                <value>
                    <fullName>1016</fullName>
                    <label>BANCREA</label>
                </value>
                <value>
                    <fullName>0019</fullName>
                    <label>BANJERCITO</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>BANK OF AMERICA SA</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>BANOBRAS</label>
                </value>
                <value>
                    <fullName>0072</fullName>
                    <label>BANORTE IXE</label>
                </value>
                <value>
                    <fullName>0071</fullName>
                    <label>BANPAIS</label>
                </value>
                <value>
                    <fullName>0058</fullName>
                    <label>BANREGIO</label>
                </value>
                <value>
                    <fullName>0060</fullName>
                    <label>BANSI</label>
                </value>
                <value>
                    <fullName>0001</fullName>
                    <label>BANXICO</label>
                </value>
                <value>
                    <fullName>0012</fullName>
                    <label>BBVA BANCOMER</label>
                </value>
                <value>
                    <fullName>0143</fullName>
                    <label>CIBANCO</label>
                </value>
                <value>
                    <fullName>0021</fullName>
                    <label>HSBC</label>
                </value>
                <value>
                    <fullName>1018</fullName>
                    <label>HSBC BANK USA</label>
                </value>
                <value>
                    <fullName>0036</fullName>
                    <label>INBURSA</label>
                </value>
                <value>
                    <fullName>0136</fullName>
                    <label>INTER BANCO</label>
                </value>
                <value>
                    <fullName>1019</fullName>
                    <label>INTERCAM Banco</label>
                </value>
                <value>
                    <fullName>0059</fullName>
                    <label>INVEX</label>
                </value>
                <value>
                    <fullName>0032</fullName>
                    <label>IXE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Name_Supplier_Form__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_Supplier_Payment__c</fullName>
        <label>Bank Name Supplier Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barras_logisticas_pendientes__c</fullName>
        <label>Barras logisticas pendientes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bloq_prpcto_mkt__c</fullName>
        <formula>IF( Ok_Folio_Mkt__c  &lt;&gt;   &quot;&quot;,TRUE,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bloq</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bloqueo_Tarifario__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bloqueo Tarifario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <inlineHelpText>Make sure that you have the same Business Areas for ACCOUNTS, FAMILIES, PRICE LISTS and SUPPLY PROJECTS.</inlineHelpText>
        <label>Business Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Freight</fullName>
                </value>
                <value>
                    <fullName>Animal Nutrition</fullName>
                </value>
                <value>
                    <fullName>Auto-Parts</fullName>
                </value>
                <value>
                    <fullName>Cloths &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Mining</fullName>
                </value>
                <value>
                    <fullName>Energy &amp; Hydrocarbons</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverages</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Machinery &amp; Parts</fullName>
                </value>
                <value>
                    <fullName>MERA Autoparts</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Other Services</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Rail Freight</fullName>
                </value>
                <value>
                    <fullName>Recruiting Services</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sea Freight</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAAT__c</fullName>
        <label>CAAT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPNumero_Registro_de_ID__c</fullName>
        <label>Numero Registro de Identificación Fiscal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_Pat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CT-Pat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_digo_IVA_Permitido__c</fullName>
        <label>Código IVA Permitido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1IRA</fullName>
                    <label>IVA RETENIDO ARRENDAMIENTO</label>
                </value>
                <value>
                    <fullName>1IRH</fullName>
                    <label>IVA RETENIDO HONORARIOS</label>
                </value>
                <value>
                    <fullName>IRF</fullName>
                    <label>IVA 4% FLETES</label>
                </value>
                <value>
                    <fullName>IRFP</fullName>
                    <label>IVA RETENIDO 4% FLETES PTE</label>
                </value>
                <value>
                    <fullName>3IRA</fullName>
                    <label>IVA RETENIDO ARRENDAMIENTOS 8%</label>
                </value>
                <value>
                    <fullName>3IRH</fullName>
                    <label>IVA RETENIDO HONORARIOS 8%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calle__c</fullName>
        <description>Precisa la calle en la que está ubicado el domicilio de origen y/o destino de los bienes o mercancías.</description>
        <inlineHelpText>Precisa la calle en la que está ubicado el domicilio de origen y/o destino de los bienes o mercancías.</inlineHelpText>
        <label>Calle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaigns__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_cotizaciones__c</fullName>
        <label>Cantidad de cotizaciones</label>
        <summaryForeignKey>Customer_Quote__c.Account_for__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Capacitacion_Acuses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capacitación Acuses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacitacion_Control_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capacitación Control Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacitacion_Operaciones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capacitación Operaciones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacitacion_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capacitación Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carban_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Caratula banco con CLABE interbancaria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier_Class__c</fullName>
        <label>Clasificacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oro</fullName>
                </value>
                <value>
                    <fullName>Plata</fullName>
                </value>
                <value>
                    <fullName>Bronce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier_Email__c</fullName>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Evaluation__c</fullName>
        <label>Evaluacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Basico</fullName>
                </value>
                <value>
                    <fullName>Auditoría Externa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CartonBox_Document__c</fullName>
        <label>CartonBox Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Certi_cta__c</fullName>
        <label>Certificaciones</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HAZMAT</fullName>
                </value>
                <value>
                    <fullName>CTPAT</fullName>
                </value>
                <value>
                    <fullName>TACEM</fullName>
                </value>
                <value>
                    <fullName>OEA</fullName>
                </value>
                <value>
                    <fullName>R CONTROL</fullName>
                </value>
                <value>
                    <fullName>CARGA PESA</fullName>
                </value>
                <value>
                    <fullName>ALIMENTICIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chinese_Factory_Name__c</fullName>
        <label>Chinese Factory Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciclo_de_Cobranza_Corto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ciclo de Cobranza Corto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cliente_con_cita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente con cita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cliente_internacional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente internacional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cobertura__c</fullName>
        <label>Cobertura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nacionales</fullName>
                </value>
                <value>
                    <fullName>Internacionales</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Country__c</fullName>
        <label>Code Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal__c</fullName>
        <description>Codigo postal Catalogo</description>
        <label>Codigo Postal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>